@@ -218,13 +218,11 @@ int PINT_req_sched_target_handle(
 	*fs_id = req->u.remove.fs_id;
 	return (0);
     case PVFS_SERV_MGMT_REMOVE_OBJECT:
-        req->flags |= PVFS_SERVER_REQ_ADMIN_MODE;
 	*readonly_flag = 0;
 	*handle = req->u.mgmt_remove_object.handle;
 	*fs_id = req->u.mgmt_remove_object.fs_id;
 	return (0);
     case PVFS_SERV_MGMT_REMOVE_DIRENT:
-        req->flags |= PVFS_SERVER_REQ_ADMIN_MODE;
 	*readonly_flag = 0;
 	*handle = req->u.mgmt_remove_dirent.handle;
 	*fs_id = req->u.mgmt_remove_dirent.fs_id;
@@ -427,7 +425,7 @@ int PINT_req_sched_post(
 	}
     }
 
-    if(!readonly_flag && !(in_request->flags & PVFS_SERVER_REQ_ADMIN_MODE))
+    if(!readonly_flag && !PVFS_SERV_IS_MGMT_OP(in_request->op))
     {
 	/* if this requests modifies the file system, we have to check
 	 * to see if we are in admin mode or about to enter admin mode
